--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "multicodec": "^3.0.1",
     "multihashes": "^4.0.2",
     "node-vibrant": "^3.2.1-alpha.1",
+    "numbro": "^2.3.2",
     "polished": "^3.3.2",
     "polyfill-object.fromentries": "^1.0.1",
     "prettier": "^2.2.1",
@@ -172,6 +173,5 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "numbro": "^2.3.2"
   }
 }
