--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-confetti": "^6.0.0",
+    "react-collapsible": "^2.8.4",
     "react-cosmos": "^5.6.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
