--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@reach/portal": "^0.10.3",
     "@react-hook/window-scroll": "^1.3.0",
     "@reduxjs/toolkit": "^1.6.1",
-    "@uniswap/redux-multicall": "^1.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.2",
@@ -61,6 +60,7 @@
     "@uniswap/governance": "^1.0.2",
     "@uniswap/liquidity-staker": "^1.0.2",
     "@uniswap/merkle-distributor": "1.0.1",
+    "@uniswap/redux-multicall": "^1.1.1",
     "@uniswap/sdk-core": "^3.0.1",
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "@uniswap/v2-core": "1.0.0",
@@ -109,8 +109,8 @@
     "prop-types": "^15.6.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
-    "react-confetti": "^6.0.0",
     "react-collapsible": "^2.8.4",
+    "react-confetti": "^6.0.0",
     "react-cosmos": "^5.6.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
@@ -180,6 +180,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@apollo/client": "^3.3.15",
-    "recharts": "^2.1.4"
+    "chartjs-plugin-dragdata": "^2.2.4",
+    "recharts": "^2.1.13"
   }
 }
